--- a/source/work/asps.html.haml
+++ b/source/work/asps.html.haml
@@ -6,11 +6,13 @@
     %article.intro
       .item-text
         %h2 Always Summer Poster Show
-        %h5 Typography Poster (18'x24')
+        %h5 Typography Poster (18”x24”)
         %p
-          Created in 2014 for an upbeat summertime song, Liar, Liar &mdash; by Avicii, this typographic heavy composition depicts somebody overcoming a destructive path; the consequence of being lead astray by someone close. The challenge was to create something that masks a word with a negative connotation, 'Liar', in a vibrant, positive way (that I would want to hang on my wall); just as the song does. You can check out the song
+          Created in 2014 for an upbeat summertime song,
+          %i Liar, Liar
+          by Avicii, this typographic heavy composition depicts somebody overcoming a destructive path and the consequence of being led astray by someone close. The challenge was to create something masking “liar”&mdash;a word with a negative connotation&mdash;in a vibrant, positive way (and a poster I would want to hang on my wall.) You can check out the song
           = link_to 'here', 'https://www.youtube.com/watch?v=uOsOcopQ4HY', target: '_blank'
           !
-        %p Bold colors were used to reflect the mood and context of the song. The sharp angles were drawn from the Artist's logo and help to define the characters of the word.
+        %p Bold colors were used to reflect the mood and context of the song. The sharp angles were drawn from the artist's logo and help define the characters of the word.
       .item-image
         = image_tag('work/asps-1.jpg', {:alt => 'Lair'})
