--- a/source/work/catalyst.html.haml
+++ b/source/work/catalyst.html.haml
@@ -7,8 +7,7 @@
       .item-text
         %h2 Catalyst
         %h5 Innovation Workshops
-        -# %p
-        -#   Content needed
+        %p Write-up coming soon.
         %cite
           %ul
             %li
@@ -30,7 +29,7 @@
           = image_tag('work/catalyst-intro.jpg', {:alt => 'Catalyst homepage background video.'})
       .item-text
         %h3 Background Video
-        %p Needs some text.
+        %p Write-up coming soon.
     %article.image
       .item-image.catalyst-toggle
         .catalyst-one
@@ -49,7 +48,7 @@
             = image_tag('work/catalyst-form-mobile.jpg', {:alt => 'Catalyst Form Screen'})
       .item-text
         %h3 2 Page app
-        %p Needs some text.
+        %p Write-up coming soon.
         %select.div-toggler{'data-target' => '.catalyst-toggle'}
           %option{'data-show' => '.catalyst-one', :value => 'catalyst-one', :selected => 'selected'} Homepage
           %option{'data-show' => '.catalyst-two', :value => 'catalyst-two'}  Forms
