--- a/source/work/combofonts.html.haml
+++ b/source/work/combofonts.html.haml
@@ -9,7 +9,7 @@
         %h5 Webfont Combination Application
         %p
           %a{:href => 'http://www.combofonts.com', :target => '_blank'}Combofonts
-          matches and recommends web font pairs. It's a personal project I worked on, alongside my product design apprenticeship.
+          matches and recommends web font pairs. It's a personal project I worked on alongside my product design apprenticeship.
         %p The application asks a series of questions based on the tone and mood of the context the text will be displayed in, provides you with a few combinations of options, and then gives you the markup to copy &amp; paste into any codebase.
         %p
           For the MVP I started with the
@@ -72,8 +72,8 @@
       .item-text
         %h3 In-App Screens
         %p Acting as an educational playground for me, this was one of my first experiences with a Ruby on Rails project. It also gave me an excuse to take a deeper dive into typography on the web.
-        %p The largest obstacle was finding a way to provide quality results, while asking the fewest amount of questions necessary.
-        %p At the very least, this was a great product design exercise, allowing me to practice the techniques and learnings from my KYN apprenticeship.
+        %p The largest obstacle was finding a way to provide quality results while asking the least amount of questions necessary.
+        %p At the very least, this was a great product design exercise allowing me to practice the techniques from my KYN apprenticeship.
         %select.div-toggler{'data-target' => '.combofonts-toggle'}
           %option{'data-show' => '.combofonts-one', :value => 'combofonts-one', :selected => 'selected'} Getting Started
           %option{'data-show' => '.combofonts-two', :value => 'combofonts-two'}  Describe
