--- a/source/work/ignite.html.haml
+++ b/source/work/ignite.html.haml
@@ -7,14 +7,14 @@
       .item-text
         %h2 Ignite
         %h5
-          Innovation lab for Adecco group
+          Innovation lab for Adecco Group
         %p
           %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
           partnered with
           %a{:href => "http://www.adecco.com/", :target => "_blank"}Adecco
-          business units and sister companies to develop new technology that drives efficiency and bring new products to market that help people work.
+          business units and sister companies to develop new technology to drive efficiency and bring new products to market and help people work.
         %p
-          The company was in need of a new marketing website that could better tell who we were and what we are about. So a team was assembled and we got to &mdash;
+          The company was in need of a new marketing website to define who we were and how we solve problems. A team was assembled and we got to
           %i work.
         %cite
           %ul
@@ -83,8 +83,8 @@
             = image_tag('work/ignite-contact-mobile.jpg', {:alt => 'Contact Screen'})
       .item-text
         %h3 2015 Marketing Site
-        %p In just two years from Ignite's launch, we outgrew the capabilities that our previous one-page marketing website could provide. With a goal of raising brand awareness and increasing product adoption rate, we aimed to make more of our information and resources available online.
-        %p Since this wasn't one of the organization's prioritized products, our entire design team collaborated to meet the project deadlines. My role on the team was to build a great codebase that any of us could use and expand upon.
+        %p In just two years from Ignite's launch, we outgrew the capabilities of what our previous one-page marketing website could provide. With a goal of raising brand awareness and increasing product adoption rate, we aimed to make more of our information and resources available online.
+        %p Since this wasn't one of the organization's prioritized products, our entire design team collaborated to meet the project deadlines. My role on the team was to build a great codebase any of us could use and expand upon.
         %select.div-toggler{'data-target' => '.ignite-toggle'}
           %option{'data-show' => '.ignite-one', :value => 'ignite-one'} Homepage
           %option{'data-show' => '.ignite-two', :value => 'ignite-two'} Selfies
@@ -97,4 +97,4 @@
         = image_tag('work/ignite-atom.png', {:alt => 'Atom editor.'})
       .item-text
         %h3 Codebase
-        %p This Ruby on Rails project was built with HAML and SASS, running with Bourbon and Neat. I typically work split screen, allowing me to reference both my HTML and CSS or JS simultaneously. I've been using Atom as my text editor recently, as it runs nicely alongside Github's version management.
+        %p This Ruby on Rails project was built with HAML and SASS, running with Bourbon and Neat. I typically work split screen, allowing me to reference both my HTML and CSS or JS simultaneously. I've been using Atom as my text editor recently, as it runs nicely alongside GitHub's version management.
