--- a/source/work/matchstiq.html.haml
+++ b/source/work/matchstiq.html.haml
@@ -8,7 +8,7 @@
         %h2 Matchstiq
         %h5 Vendor Management System
         %p The problem: Both clients and recruiters need a data-driven, digital solution for job order fulfillment that is quick and easy to use.
-        %p The solution: Matchstiq is a simple online tool with collaborative job order management, comprehensive analytics and in-app activity tracking for both hiring managers and recruiters.
+        %p The solution: Matchstiq is a simple online tool with collaborative job order management, comprehensive analytics, and in-app activity tracking for both hiring managers and recruiters.
         %cite
           %ul
             %li
@@ -61,8 +61,8 @@
             = image_tag('work/ms-resources-mobile.jpg', {:alt => 'Resources Screen'})
       .item-text
         %h3 In-App Screens
-        %p When I joined the Matchstiq team, there was already a v1 out in the world. I was brought on to help with the next version, as the team was making pivots&amp; in the product. My first tasks were to update the landing, authentication, and resources pages.
-        %p We then move onto the interior. Starting with a custom dashboard giving recruiters an overview of information, in an easily digestible format.
+        %p When I joined the Matchstiq team, there was already a v1 out in the world. I was brought on to help with the next version, as the team was making pivots in the product. My tasks were to update the landing, authentication, and resources pages.
+        %p We then move onto the interior by starting with a custom dashboard giving recruiters an overview of information in an easily digestible format.
         %select.div-toggler{'data-target' => '.matchstiq-toggle'}
           %option{'data-show' => '.matchstiq-one', :value => 'matchstiq-one'} Landing
           %option{'data-show' => '.matchstiq-two', :value => 'matchstiq-two'}  Login
@@ -77,12 +77,12 @@
         %p
           We partnered up with
           %a{:href => "http://www.soliant.com/", :target => "_blank"}Soliant Health
-          to run a 3 month initiative to see if we could use the power behind Matchstiq to create a better system for hiring and managing contract nurse positions and applicants.
-        %p We created an application workflow which provides recruiters incentives to provide quality and timely applicants, through a tiered point system.
+          to run a 3-month initiative to see if we could use the power behind Matchstiq to create a better system for hiring and managing contract nurse positions and applicants.
+        %p We created an application workflow offering recruiters incentives to provide quality and timely applicants through a tiered point system.
         %p
-          Our walkaway deliverable was a wireframe mockup using
+          Our walk away deliverable was a wireframe mockup using
           %a{:href => "https://balsamiq.com/", :target => "_blank"}Balsamiq
-          then uploading to
+          &comma; and then uploading to
           %a{:href => "https://www.invisionapp.com/", :target => "_blank"}InVision
           to create a clickable prototype to share back with the Soliant stakeholders.
     %article.image
@@ -137,7 +137,7 @@
           = image_tag('work/matchstiq-presentation.gif', {:alt => 'Matchstiq Branded Presentation'})
       .item-text
         %h3 Support Materials
-        %p Along with the web app, we created quickly consumable, support materials to provide internal stakeholders and sales teams; including: FAQ's, Guides, and Presentations.
+        %p Along with the web app, we created quickly consumable, support materials to provide internal stakeholders and sales teams including FAQ's, guides, and presentations.
         %select.div-toggler{'data-target' => '.matchstiq-toggle-2'}
           %option{'data-show' => '.matchstiq-six', :value => 'matchstiq-six'} One-Pager (Front)
           %option{'data-show' => '.matchstiq-seven', :value => 'matchstiq-seven'}  Intro One-Pager (Back)
