--- a/source/work/metrology.html.haml
+++ b/source/work/metrology.html.haml
@@ -45,7 +45,7 @@
         = image_tag('work/metrology-6.png', {:alt => 'Pop&amp;out Menu Screen'})
       .item-text
         %h3 Pop&ndash;out Menu
-        %p During any time of the process or at any location within the app, the user can open this quick access menu by simply selecting the gear in the upper right hand corner. The decision to create a pop&ndash;out menu allows the user to still keep track of where they are in the app, visually.
+        %p During any time of the process or at any location within the app, the user can open this quick access menu by simply selecting the gear in the upper right-hand corner. The decision to create a pop–out menu allows the user to still keep track of where they are in the app visually.
     %article.phone
       .item-image
         = image_tag('work/metrology-7.png', {:alt => 'History Screen'})
