--- a/source/work/onespark.html.haml
+++ b/source/work/onespark.html.haml
@@ -10,7 +10,7 @@
         %p
           %a{:href => "http://onespark.com/", :target => "_blank"}One Spark
           connects creators with the resources they need to bring their ideas to life through crowdfunding.
-        %p I had the opportunity to help redesign the 2016 dashboard and project application flow by creating experiences and designs that would give the brand a fresh visual update and better guide the user towards the actions they need to make, all while still sitting in well with existing UI elements and already defined processes.
+        %p I had the opportunity to help redesign the 2016 dashboard and project application flow by creating experiences and designs to give the brand a fresh visual update and better guide the user towards the actions they need to make while using  existing UI elements and already defined processes.
         %cite
           %ul
             %li
@@ -51,7 +51,7 @@
             = image_tag('work/onespark-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
       .item-text
         %h3 Authentication Pages
-        %p Since the authentication pages are some of the first opportunities to interact with our users, tackling these pages was the first line of business. We wanted to remove any barriers or unnecessary noise that could distract or prevent the user from accomplishing their only goal on these screens &mdash; to sign in.
+        %p Since the authentication pages are some of the first opportunities to interact with our users, tackling these pages was the first line of business. We wanted to remove any barriers or unnecessary noise causing distraction or preventing the user from accomplishing their only goal on these screens &mdash; to sign in.
         %select.div-toggler{'data-target' => '.onespark-toggle'}
           %option{'data-show' => '.onespark-one', :value => 'onespark-one'} Sign In
           %option{'data-show' => '.onespark-two', :value => 'onespark-two'}  Register
@@ -66,14 +66,14 @@
           = image_tag('work/onespark-launchpad-mobile.jpg', {:alt => 'Launchpad Screen'})
       .item-text
         %h3 Launchpad
-        %p One of the main sections of the site that needed reworking was the user launchpad. This is the first screen a user sees upon sign in and it has real estate for almost every major action a user can take in the app.
-        %p The layout for this page needed to work well with two different types of people, Contributors (those who donate to projects) and Creators (those who submit projects). That being said, content was organized by separating out items that are available to all users and items specific for Creators. The creator callout banner swaps out dynamically depending on which step of the process the creator is in.
+        %p One of the main sections of the site to be reworked was the user launchpad. This is the first screen a user sees upon sign-in.
+        %p The layout for this page needed to work well with two different types of people, Contributors (those who donate to projects) and Creators (those who submit projects). The content was organized by separating out items available to all users and items specific for Creators. The creator callout banner swaps out dynamically depending on which step of the process the creator is in.
     %article.image
       .item-image.toggle-view
         = image_tag('work/onespark-profile-sketch.jpg', {:alt => 'Sketch Artboards'})
       .item-text
         %h3 Sketch artboards linked with Marvel
         %p
-          I've found that by having a working prototype of my designs, it allows me to better express my thoughts and ideas to company stakeholders. To present these and other concepts, I used
+          By having a working prototype of my designs, it allows me to better express my thoughts and ideas to company stakeholders. To present these and other concepts, I used
           %a{:href => "https://marvelapp.com/", :target => "_blank"}Marvel
           's Sketch plugin to quickly send my working Sketch III artboards to my online prototype.
