--- a/source/work/oppify.html.haml
+++ b/source/work/oppify.html.haml
@@ -8,9 +8,9 @@
         %h2 Oppify
         %h5 Your Personal Job Search Advocate
         %p
-          Oppify attempted to close the communication gap between recruiters and candidates. Empowering candidates with the visibility to browse, search, and apply for available
+          Oppify attempted to close the communication gap between recruiters and candidates by empowering candidates with the visibility to browse, search, and apply for available
           %a{:href => "http://www.adecco.com/", :target => "_blank"}Adecco
-          positions; All while feeling engaged by curated content and coaching from our recruiting and hiring experts. The ultimate goal was to transform their careers.
+          positions while feeling engaged by curated content and coaching from our recruiting and hiring experts. The ultimate goal was to transform their careers.
         %cite
           %ul
             %li
@@ -65,8 +65,8 @@
         %p
           This was my first project and team I was assigned to at
           %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
-          &period; I was brought in to assist in the front-end development, as the project suffered from a lot of technical debt. My plan of attack was to set up a UI controller where I would simply rebuild the pages optimally; in my own, less logic heavy, environment.
-        %p After cleaning up most of the debt, I was able to switch gears and assist in the creation of new features; such as, the job board and messaging.
+          &period; I was brought in to assist in the front-end development as the project suffered from a lot of technical debt. My plan was to set up a UI controller where I would rebuild the pages optimally in my own less logic heavy environment.
+        %p After cleaning up most of the debt, I was able to switch gears and assist in the creation of new features such as the job board and messaging.
         %select.div-toggler{'data-target' => '.oppify-toggle'}
           %option{'data-show' => '.oppify-one', :value => 'oppify-one'} Marketing
           %option{'data-show' => '.oppify-two', :value => 'oppify-two'}  Sign In
@@ -83,7 +83,7 @@
           = image_tag("work/oppify-recruiter-do's-don'ts-back.jpg", {:alt => "Oppify Recruiter Do's and Don'ts Back Page"})
       .item-text
         %h3 Print-outs
-        %p There came times where I was able work on printable items, such as, this branded flyer that promoted a networking event we hosted to speak directly with our constituents. We hung them in co-working spaces and outside offices around downtown.
+        %p There were times where I was able work on printable items, like this branded flyer to promote a networking event we hosted to speak directly with our constituents. We hung them in co-working spaces and outside offices around downtown.
         %p Other tasks included simple, self-printable resources the recruiting offices could print out on their own and share.
         %select.div-toggler{'data-target' => '.oppify-toggle-2'}
           %option{'data-show' => '.oppify-six', :value => 'oppify-six', :selected => 'selected'} Meetup Flyer
