--- a/source/work/resumebot.html.haml
+++ b/source/work/resumebot.html.haml
@@ -9,8 +9,8 @@
         %h5 Format r&eacute;sum&eacute;s faster
         %p
           %a{:href => "http://www.resumebot.io/", :target => "_blank"}R&eacute;sum&eacute;Bot
-          is a tool to help recruiters format resumes faster. Tasks like organizing content, adding bullets, and styling text are automated and completed within seconds.
-        %p The concept for this promotional t-shirt was to represent the animation of consuming a resume, while keeping it on a printed medium; changing expressions as you read the text.
+          is a tool to help recruiters format resumes faster. Tasks like organizing content, adding bullets, and styling text will be automated and completed within seconds.
+        %p The concept for this promotional t-shirt was to represent the animation of consuming a resume while keeping it on a printed medium; changing expressions as you read the text.
         %cite
           %ul
             %li
