--- a/source/work/rumble.html.haml
+++ b/source/work/rumble.html.haml
@@ -7,7 +7,7 @@
       .item-text
         %h2 Rumble
         %h5 Location Based Chat App (Student Project)
-        %p Rumble is a geo-locational chat app which is ideal for large conferences and sporting events. After signing in and setting the radius of your search, you are able to select a feed to chat in or create you own. The concept is based around the fact that thunder can be heard only within the radius of a certain location.
+        %p Rumble is a geo-locational chat app, which is ideal for large conferences and sporting events. After signing in and setting the radius of your search, you are able to select a feed to chat in or create you own. The concept is based on the fact that thunder can be heard only within the radius of a certain location.
       .item-image
         = image_tag('work/rumble-devices.png', {:alt => 'Rumble Devices'})
     %article.phone
@@ -21,25 +21,25 @@
         = image_tag('work/rumble-2.png', {:alt => 'Login Screen'})
       .item-text
         %h3 Login
-        %p Login to the app to begin use, or create a new account.
+        %p Login to the app to begin use or create a new account.
     %article.phone
       .item-image
         = image_tag('work/rumble-3.png', {:alt => 'Login Screen'})
       .item-text
         %h3 Select a Radius
-        %p To determine who you will be able to chat with, select a radius of the distance you want included.
+        %p To determine whom you will be able to chat with, select a radius of the distance you want to include.
     %article.phone
       .item-image
         = image_tag('work/rumble-4.png', {:alt => 'Available Feeds Screen'})
       .item-text
         %h3 Available Feeds
-        %p Based on your selected radius, the available feeds are shown. If there isn't one on the subject you want, create your own!
+        %p Based on your selected radius the available feeds are shown. If there isn't one on the subject you want, create your own!
     %article.phone
       .item-image
         = image_tag('work/rumble-5.png', {:alt => 'Feed Description Screen'})
       .item-text
         %h3 Feed Description
-        %p After you select a feed, you are brought to a screen which provides details on what it's about.
+        %p After you select a feed, you are brought to a screen providing details on what it's about.
     %article.phone
       .item-image
         = image_tag('work/rumble-6.png', {:alt => 'Chat Screen'})
