--- a/source/work/txtout.html.haml
+++ b/source/work/txtout.html.haml
@@ -10,7 +10,7 @@
         %p
           Created to relieve a business pain-point,
           %a{:href => "http://www.ignitewithus.com/products/txtout", :target => "_blank"}TxtOut
-          replaced an outdated voice-mail center used by Nike and Ebay manufacturing warehouses.
+          replaced an outdated voice-mail center used by Nike and eBay manufacturing warehouses.
         %p Associates can call-out and, for the first time, text-out tardy or absent. For the staffing agency, it frees associates from manually transcribing voicemails and provides them with searchable, digital attendance reports.
         %cite
           %ul
@@ -57,8 +57,8 @@
             = image_tag('work/txtout-forgotpw-mobile.jpg', {:alt => 'Forgot Password Screen'})
       .item-text
         %h3 In-App Screens
-        %p Upon returning from the end of the year holidays, I was apart of a team that was formed to create TxtOut. It was a fast-pace, 3 month initiative with the goal of creating an interface for a well-performing, quickly hacked together system.
-        %p The interface consisted of a general dashboard which displayed call-outs for individual branches, along with authentication and admin pages.
+        %p Upon returning from the end of the year holidays, I was a part of a team formed to create TxtOut. It was a fast-paced, 3-month initiative with the goal of creating an interface for a well-performing, quickly hacked together system.
+        %p The interface consisted of a general dashboard displaying call-outs for individual branches, along with authentication and admin pages.
         %p
           This project continued on to become one of
           %a{:href => "http://www.ignitewithus.com/", :target => "_blank"}Ignite
