--- a/source/work/wayfind.html.haml
+++ b/source/work/wayfind.html.haml
@@ -9,7 +9,7 @@
         %h5 Career Pathing Tool
         %p
           %a{:href => "http://www.wayfind.to", :target => "_blank"}Wayfind
-          is a user-friendly, cloud-based application that helps businesses retain and develop employees by empowering them to discover roles best suited to their personality and interests so they can create their own custom career path within their organization.
+          is a user-friendly, cloud-based application helping businesses retain and develop employees by empowering them to discover roles best suited to their personality and interests so they can create their own custom career path within their organization.
         %p
           Read more about how and why we choose to create this product
           %a{:href => "http://blog.ignitewithus.com/wayfind-millennial-career-path/", :target => "_blank"} here
@@ -156,7 +156,7 @@
       .item-text
         %h3 In-App Screens
         %p Users can search for roles through one of our recommended channels, browse through categories, or search for something more specific. As they're browsing, they can save multiple roles that catch their interest to act upon at a later time.
-        %p Once they find a desired role, they can create a plan. This feature helps them choose a personalized career path leading them to their desired role, gaining the skills and experience they need along the way.
+        %p Once they find the desired position, they can create a plan. This feature helps them choose a personalized career path leading them to their preferred role, gaining the skills and experience they need along the way.
         %p Profile pages are alternative versions of the onboarding questions, allowing users to re-adjust their profile to increase the accuracy of our recommendations.
         %select.div-toggler{'data-target' => '.wayfind-toggle-2'}
           %option{'data-show' => '.wayfind-eight', :value => 'wayfind-eight'} Login
@@ -229,9 +229,9 @@
       .item-text
         %h3 Onboarding Flow
         %p
-          Email invites are sent out by a company's HR department, where users are directed to a brief
+          A company’s HR department sends out email invites where users are directed to a brief
           %a{:href => "https://en.wikipedia.org/wiki/Myers%E2%80%93Briggs_Type_Indicator", :target => "_blank"}Myers–Briggs
-          style questionnaire. Here we gathered the minimum amount of information we felt that was needed for our algorithm to help employees find their dream job. What you see to the left are the results of outcomes we learned from our user interview sessions.
+          style questionnaire. Here we gathered the minimum amount of information we felt was needed for our algorithm to help employees find their dream job. What you see to the left are the results of outcomes we learned from our user interview sessions.
         %select.div-toggler{'data-target' => '.wayfind-toggle'}
           %option{'data-show' => '.wayfind-one', :value => 'wayfind-one'} Onboarding Intro
           %option{'data-show' => '.wayfind-two', :value => 'wayfind-two'} Onboarding Personality
@@ -248,4 +248,4 @@
         %p
           The team used
           %a{:href => "https://www.invisionapp.com/", :target => "_blank"}InVision
-          as common ground where we could review concepts and host discussions about the product efficiently. Linking my Sketch artboards directly to the project, I was able to quickly share revisions with the team (plus it let everyone always have my most recent version).
+          as a common ground where we could review concepts and host discussions about the product efficiently. Linking my Sketch artboards directly to the project, I was able to quickly share revisions with the team (plus it let everyone always have my most recent version).
