--- a/source/work/traverse.html.haml
+++ b/source/work/traverse.html.haml
@@ -7,7 +7,7 @@
       .item-text
         %h2 Traverse
         %h5 Indoor Rock Climbing Magazine (Student Project)
-        %p Traverse is a digital magazine best viewed on a tablet. This indoor-rock climbing magazine aims to replicate the high-quality of an outdoor climbing magazine, however geared towards indoor climbing. Topics relate to gym competitions, training guides, or gear reviews.
+        %p Traverse is a digital magazine best viewed on a tablet. This indoor climbing magazine aims to replicate the high-intensity of an outdoor climbing magazine geared towards indoor climbing. Topics relate to gym competitions, training guides, and gear reviews.
       .item-image
         = image_tag('work/traverse-devices.png', {:alt => 'Traverse Devices'})
     %article.tablet
@@ -15,19 +15,19 @@
         = image_tag('work/traverse-1.png', {:alt => 'Cover Page'})
       .item-text
         %h3 Cover
-        %p For the cover, I choose to steer away from the normal format of a magazine, which includes callouts to feature stories. Instead I choose to only include the logo in the middle of the page, keeping the layout simple and aesthetically pleasing. However, it was important to still keep the issue number visible.
+        %p For the cover, I choose to steer away from the normal format of a magazine, which includes callouts to feature stories. Instead, I choose to only include the logo in the middle of the page, keeping the layout simple and aesthetically pleasing. It was important to still keep the issue number visible.
     %article.tablet
       .item-image
         = image_tag('work/traverse-2.png', {:alt => 'Table of Contents Page'})
       .item-text
         %h3 Table of Contents
-        %p The layout for the table of contents is determined by the image, blending the background into the image.
+        %p The layout for the table of contents is determined by the image blending the background into the image.
     %article.tablet
       .item-image
         = image_tag('work/traverse-3.png', {:alt => 'Departments Page'})
       .item-text
         %h3 Department
-        %p This is an example of one of the department pages. Since this magazine is in a digital format, it allowed me to include interactive pages. Here, the user is able to swipe across the bottom of the screen where the displayed shoe will change.
+        %p This is an example of one of the department pages. Since this magazine is in a digital format, it allowed me to include interactive pages. The user is able to swipe across the bottom of the screen where the displayed shoe will change.
     %article.tablet
       .item-image
         = image_tag('work/traverse-4.png', {:alt => 'Feature Well Page'})
@@ -39,10 +39,10 @@
         = image_tag('work/traverse-5.png', {:alt => 'Feature Interior Page'})
       .item-text
         %h3 Feature Interior
-        %p The top of this page includes an image to keep the user's attention, while guiding the user to the beginning of the story.
+        %p The top of this page includes an image to keep the user's attention while guiding the user to the beginning of the story.
     %article.tablet
       .item-image
         = image_tag('work/traverse-6.png', {:alt => "Next Month's Cover"})
       .item-text
         %h3 Next Month's Cover
-        %p Another example of a cover. It is important that the focus of the photos isn't in the center of the page since that is where the logo will always rest. It also helps if the image can guide the user's eye to the center.
+        %p Here’s another example of a cover. It is important to note the focus of the photos isn't in the center of the page since it is where the logo will always rest. It also helps if the image can guide the user's eye to the center.
