--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -29,12 +29,12 @@
         %h2 Skills
         %ul
           %li UX / UI / Responsive Design
-          %li Design Thinking / Faciliation
+          %li Design Thinking / Facilitation
           %li Web Prototyping / User Interviews
           %li Sketch 3 / Adobe Creative Suite
           %li HAML / SASS / BEM / CSS Frameworks
           %li React / Ruby / Rails / JQuery / PHP
-          %li Github / Command Line / Rspec Testing
+          %li GitHub / Command Line / Rspec Testing
           %li Lean-Startup Methods / Agile Development
       %figure
         %h2 Experience
