More copy edits

--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -7,7 +7,7 @@
       %h2 R&eacute;sum&eacute;
       %a.button.outline{href: 'jkellum-resume-2016.pdf', :target => '_blank'}
         %i.ion-ios7-download
-        PDF Resum&eacute;
+        PDF R&eacute;sum&eacute;
     %article
       %figure
         %h2 Education
@@ -60,7 +60,7 @@
           %h4 Digital Editor
           %p Responsible for all aspects of Spinnaker Digital publications and management: web services, editorial content, art and design, advertising, budget and personnel.
           %h4 Lead Digital Designer
-          %p Designed WordPress theme for the Spinnaker’s 2012 site re&ndash;launch.
+          %p Designed WordPress theme for the Spinnaker’s 2012 site relaunch.
           %p Attended the 2012 Associated Collegiate Press National College Media Convention in Chicago, IL.
         %dl
           %h3 Brown Dog Creative
@@ -71,7 +71,7 @@
           %h3 Salty Palms, LLC
           %h6 Jun. 2012 &ndash; Jan. 2013 | Saint Augustine, FL
           %h4 Web Consultant
-          %p Designed tri-fold brochure and created custom-themed WordPress e-commerce website using WooCommerce.
+          %p Designed trifold brochure and created custom-themed WordPress e-commerce website using WooCommerce.
         %dl
           %h3 Publix
           %h6 Feb. 2005 &ndash; Feb. 2013 | Saint Augustine, FL
