Update resume button link.

--- a/source/resume.html.haml
+++ b/source/resume.html.haml
@@ -5,7 +5,7 @@
   .wrapper.m-page.scene_element.scene_element--fadeinup
     %aside
       %h2 R&eacute;sum&eacute;
-      %a.button.outline{href: 'jkellum-resume-2016.pdf', :target => '_blank'}
+      %a.button.outline{href: '../jkellum-resume-2016.pdf', :target => '_blank'}
         %i.ion-ios7-download
         PDF R&eacute;sum&eacute;
     %article
